# github-stats-transparent

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  REUSE.toml  pyproject.toml
.github/: zizmor.yml
.github/workflows/: main.yml
src/gst/: __init__.py  generate_images.py  helpers.py  queries.py  stats.py
