# SPDX-FileCopyrightText: 2026 Johann Christensen
#
# SPDX-License-Identifier: MIT

[build-system]
build-backend = "uv_build"
requires = ["uv_build>=0.8.11"]

[dependency-groups]
dev = [
  "prek>=0.2.25",
  "reuse>=6.0.0",
  "ruff>=0.14.0",
  "ty>=0.0.8",
  "types-requests>=2.32.4.20250913",
  "uv>=0.8.11"
]

[project]
authors = [
  {name = "Rahul Jha"},
  {name = "Johann Christensen", email = "johannchristensen@outlook.de"}
]
classifiers = [
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Development Status :: 5 - Stable",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Typing :: Typed",
  "Programming Language :: Python :: Implementation :: CPython"
]
dependencies = ["requests", "aiohttp"]
description = "GitHub Stats Transparent (GST) generates transparent statistics images for GitHub profiles and repositories."
license = "GPL-3.0-or-later"
license-files = ["LICENSES/*"]
name = "gst"
readme = "README.md"
requires-python = ">=3.10"
version = "2.0.0"

[tool.flake8]
check-return-types = true
extend-ignore = ["DCO010", "DCO060"]
max-complexity = "10"
max-line-length = "88"
select = "DCO, DOC"
style = "google"

[tool.licensecheck]
using = "PEP631"
zero = true

[tool.mypy]
ignore_missing_imports = true
python_version = "3.10"

[tool.pylint.MASTER]
load-plugins = ["pylint_per_file_ignores"]

[tool.pylint.'MESSAGES CONTROL']
max-line-length = "88"

[tool.pylint.SIMILARITIES]
ignore-comments = "yes"
ignore-docstrings = "yes"
ignore-imports = "yes"
min-similarity-lines = 10

[tool.ruff]
target-version = "py310"

[tool.ruff.format]
preview = true

[tool.ruff.lint]
extend-fixable = ["ALL"]
extend-select = [
  "A",
  "ANN",
  "ARG",
  "ASYNC",
  "B",
  "BLE",
  "C4",
  "C90",
  "D",
  "DOC",
  "DTZ",
  "E",
  "ERA",
  "EXE",
  "F",
  "FAST",
  "FBT",
  "FLY",
  "FURB",
  "I",
  "INP",
  "ISC",
  "LOG",
  "N",
  "NPY",
  "PERF",
  "PIE",
  "PL",
  "PLE",
  "PLR",
  "PLW",
  "PT",
  "PTH",
  "Q",
  "RET",
  "RSE",
  "RUF",
  "S",
  "SIM",
  "SLF",
  # "T20",
  "TC",
  "UP",
  "W"
]
ignore = ["E203", "SIM300", "D105", "D107", "S101", "ASYNC240"]
preview = true

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.pycodestyle]
max-doc-length = 72

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.uv]
default-groups = "all"
